<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.marcosignoretto.themoviedbbrowser.presentation.screen.detail.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">



        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/htab_collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/posterImage"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                tools:placeholderImage="@drawable/ic_no_poster"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                tools:scaleType="centerCrop" />


            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:background="@drawable/parallax_overlay"
                android:fitsSystemWindows="true"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/contentView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/android_standard_padding">

                <!-- Title and overview -->

                <TextView
                    style="@style/MovieDetail.Title"
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/MovieDetail.Overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/android_standard_padding"/>

                <!-- =================== MOVIE INFO ====================== -->

                <TextView
                    style="@style/MovieDetail.Info"
                    android:text="@string/activity_detail_info_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Release date -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_release_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/releaseDate"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name"/>


                <!-- Imdb Id -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_imdb_id_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/imdbId"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Spoken languages -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_spoken_languages_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/spokenLanguages"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Runtime -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_runtime_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/runtime"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Production Companies -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_production_companies_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/productionCompanies"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Production Countries -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_production_countries_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/productionCountries"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Original language -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_original_language_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/originalLanguage"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Genres -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_genres_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/genres"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Adult -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_for_adult_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/adult"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/android_standard_padding"/>


                <!-- =================== MOVIE RANKING ====================== -->

                <TextView
                    style="@style/MovieDetail.Info"
                    android:text="@string/activity_detail_ranking_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- vote average -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_vote_average_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voteAverage"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Vote count -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_vote_count_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voteCount"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Popularity -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_popularity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/popularity"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Tagline -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_tagline_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tagline"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Revenue -->

                <TextView
                    style="@style/MovieDetail.Label"
                    android:text="@string/activity_detail_revenue_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/revenue"
                    style="@style/MovieDetail.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />










            </LinearLayout>





        </android.support.v4.widget.NestedScrollView>






    </RelativeLayout>

    <TextView
        style="@style/MovieDetail.ErrorView"
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/generic_error"
        android:layout_gravity="center"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        />




</android.support.design.widget.CoordinatorLayout>
